<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentPermiso">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="173dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/raleway_black_italic"
                        android:gravity="center"
                        android:text="Solicita Permiso"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                </RelativeLayout>


                <ImageView
                    android:id="@+id/imgPersonaP"
                    android:layout_width="131dp"
                    android:layout_height="109dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:foregroundGravity="center"
                    android:src="@drawable/perfil" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAzuloscuro" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="34dp">

                    <TextView
                        android:id="@+id/txtFechaSP"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/fecha"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/nombres"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtNombreSP"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/raleway_medium"
                        android:inputType="textMultiLine"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp">


                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/Documento"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtdocumentoSP"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/Instructor"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spInstructor"
                        android:layout_width="180dp"
                        android:layout_height="19dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true" />


                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAzuloscuro" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="11dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/raleway_black_italic"
                        android:text="Horas"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:fontFamily="@font/raleway_black_italic"
                        android:text="@string/salidaa"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp">

                    <EditText
                        android:id="@+id/txtHoraT1"
                        android:layout_width="80dp"
                        android:layout_height="69dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/horato"
                        android:inputType="textPersonName"
                        android:textAlignment="center" />

                    <ImageButton
                        android:id="@+id/btnHora11"
                        android:layout_width="43dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="-7dp"
                        android:layout_toEndOf="@+id/txtHoraT1"
                        android:background="@drawable/horita" />

                    <EditText
                        android:id="@+id/txtHota1"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toStartOf="@+id/btnHora1"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/hora"
                        android:inputType="textPersonName" />

                    <ImageButton
                        android:id="@+id/btnHora1"
                        android:layout_width="41dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="2dp"
                        android:background="@drawable/horita" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="64dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/motivo"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spmotivoP"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true" />


                </RelativeLayout>


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAzuloscuro" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/raleway_black_italic"
                        android:text="@string/SolicitoPermisoPor"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtdetalleSP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:ems="10"
                        android:fontFamily="@font/raleway_light"
                        android:inputType="textMultiLine"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />


                </RelativeLayout>


                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/raleway_light"
                    android:text="@string/Enviar"
                    android:textColor="#fff"
                    android:textSize="16sp" />


            </LinearLayout>

        </ScrollView>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
